--- a/larvagram/resources/sass/app.scss
+++ b/larvagram/resources/sass/app.scss
@@ -1,6 +1,7 @@
 
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 
 // Variables
 @import 'variables';
